--- a/springboot-webmvc/pom.xml
+++ b/springboot-webmvc/pom.xml
@@ -14,21 +14,63 @@
 	<java.version>21</java.version>
   </properties>
   
-  
-  <dependencies>
-  	<!-- springboot core starter -->
+   <dependencies>
+	<!-- springboot devtools -->
 	<dependency>
-	  <groupId>org.springframework.boot</groupId>
-	  <artifactId>spring-boot-starter</artifactId>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-devtools</artifactId>
+	</dependency>
+
+	<!-- springboot starter for web(mvc)-->
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-web</artifactId>
+	</dependency>
+
+	<!-- springboot starter for thymeleaf -->
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-thymeleaf</artifactId>
 	</dependency>
 	
-	<!-- springboot starter for testing -->
+	<!-- jstl/el -->
 	<dependency>
-	  <groupId>org.springframework.boot</groupId>
-	  <artifactId>spring-boot-starter-test</artifactId>
-	  <scope>test</scope>
+		<groupId>jakarta.el</groupId>
+		<artifactId>jakarta.el-api</artifactId>
+		<version>5.0.0</version>
+	</dependency>
+	<dependency>
+		<groupId>jakarta.servlet.jsp.jstl</groupId>
+		<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.glassfish.web</groupId>
+		<artifactId>jakarta.servlet.jsp.jstl</artifactId>
+	</dependency>
+
+	<!-- tomcat jasper -->
+	<dependency>
+	    <groupId>org.apache.tomcat.embed</groupId>
+	    <artifactId>tomcat-embed-jasper</artifactId>
+	    <scope>provided</scope>
+	</dependency>
+			
+	<!-- springvoot starter for testing -->
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-test</artifactId>
+		<scope>test</scope>
 	</dependency>
   </dependencies>
-
+	
+  <build>
+	<finalName>springboot-webmvc</finalName>
+	<plugins>
+		<plugin>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+		</plugin>
+	</plugins>
+  </build>
   
 </project>
